attachment fixes